<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shimmer_color"
    tools:context=".app.screens.main.weather.WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainWeatherContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:padding="@dimen/medium_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityTextInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_space"
                android:layout_marginTop="@dimen/medium_space"
                android:layout_marginEnd="@dimen/medium_space"
                android:hint="@string/hint_search_by_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg"
                    android:cursorVisible="false"
                    android:drawableStart="@drawable/ic_baseline_search"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/black"
                    app:hintTextColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/locationCityIconImageView"
                style="@style/WeatherIconImageView"
                android:src="@drawable/ic_baseline_location_on"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityTextInput" />

            <TextView
                android:id="@+id/cityNameTextView"
                style="@style/TitleTextView"
                android:layout_marginStart="@dimen/low_space"
                android:text="@string/test_city"
                app:layout_constraintBottom_toBottomOf="@id/locationCityIconImageView"
                app:layout_constraintStart_toEndOf="@id/locationCityIconImageView"
                app:layout_constraintTop_toTopOf="@+id/locationCityIconImageView" />

            <TextView
                android:id="@+id/temperatureTextView"
                style="@style/TitleTextView"
                android:text="@string/test_temperature_new"
                android:layout_marginTop="@dimen/medium_space"
                android:textColor="@color/black"
                android:textSize="76sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/weatherIconImageView"
                app:layout_constraintTop_toBottomOf="@+id/cityNameTextView" />

            <TextView
                android:id="@+id/currentWeatherTextView"
                style="@style/WeatherDetailsTextView"
                android:text="@string/test_weather_description"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherIconImageView" />

            <TextView
                android:id="@+id/currentDateTextView"
                style="@style/WeatherDetailsTextView"
                android:text="@string/test_date"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/currentWeatherTextView"
                app:layout_constraintEnd_toEndOf="@+id/currentWeatherTextView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/currentWeatherTextView" />

            <ImageView
                android:id="@+id/weatherIconImageView"
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:src="@drawable/ic_winter_w"
                app:layout_constraintBottom_toBottomOf="@+id/temperatureTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/temperatureTextView"
                app:layout_constraintTop_toTopOf="@+id/temperatureTextView" />

            <ImageView
                android:id="@+id/temperatureImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                app:layout_constraintBottom_toBottomOf="@+id/humidityImageView"
                app:layout_constraintEnd_toStartOf="@+id/humidityImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/humidityImageView"
                app:srcCompat="@drawable/ic_temperature" />

            <TextView
                android:id="@+id/feelsLikeTextView"
                style="@style/WeatherValueTextView"
                android:text="@string/test_temperature"
                app:layout_constraintEnd_toEndOf="@+id/temperatureImageView"
                app:layout_constraintStart_toStartOf="@+id/temperatureImageView"
                app:layout_constraintTop_toBottomOf="@+id/temperatureImageView" />

            <TextView
                android:id="@+id/feelsLikeHintTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_feels_like"
                app:layout_constraintEnd_toEndOf="@+id/feelsLikeTextView"
                app:layout_constraintStart_toStartOf="@+id/feelsLikeTextView"
                app:layout_constraintTop_toBottomOf="@+id/feelsLikeTextView" />


            <ImageView
                android:id="@+id/humidityImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginTop="@dimen/large_space"
                app:layout_constraintEnd_toStartOf="@+id/pressureImageView"
                app:layout_constraintStart_toEndOf="@+id/temperatureImageView"
                app:layout_constraintTop_toBottomOf="@+id/PM25TitleTextView"
                app:srcCompat="@drawable/ic_humidity" />

            <TextView
                android:id="@+id/humidityTextView"
                style="@style/WeatherValueTextView"
                android:text="@string/test_humidity"
                app:layout_constraintEnd_toEndOf="@+id/humidityImageView"
                app:layout_constraintStart_toStartOf="@+id/humidityImageView"
                app:layout_constraintTop_toBottomOf="@+id/humidityImageView" />

            <TextView
                android:id="@+id/humidityHintTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_humidity"
                app:layout_constraintEnd_toEndOf="@+id/humidityTextView"
                app:layout_constraintStart_toStartOf="@+id/humidityTextView"
                app:layout_constraintTop_toBottomOf="@+id/humidityTextView" />

            <ImageView
                android:id="@+id/pressureImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                app:layout_constraintBottom_toBottomOf="@+id/humidityImageView"
                app:layout_constraintEnd_toStartOf="@+id/windImageView"
                app:layout_constraintStart_toEndOf="@+id/humidityImageView"
                app:layout_constraintTop_toTopOf="@+id/humidityImageView"
                app:srcCompat="@drawable/ic_pressure" />

            <TextView
                android:id="@+id/pressureTextView"
                style="@style/WeatherValueTextView"
                android:text="@string/test_pressure"
                app:layout_constraintEnd_toEndOf="@+id/pressureImageView"
                app:layout_constraintStart_toStartOf="@+id/pressureImageView"
                app:layout_constraintTop_toBottomOf="@+id/pressureImageView" />

            <TextView
                android:id="@+id/pressureHintTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_pressure"
                app:layout_constraintEnd_toEndOf="@+id/pressureTextView"
                app:layout_constraintStart_toStartOf="@+id/pressureTextView"
                app:layout_constraintTop_toBottomOf="@+id/pressureTextView" />

            <ImageView
                android:id="@+id/windImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                app:layout_constraintBottom_toBottomOf="@+id/humidityImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pressureImageView"
                app:layout_constraintTop_toTopOf="@+id/humidityImageView"
                app:srcCompat="@drawable/ic_wind" />

            <TextView
                android:id="@+id/windSpeedTextView"
                style="@style/WeatherValueTextView"
                android:text="@string/test_wind_speed"
                app:layout_constraintEnd_toEndOf="@+id/windImageView"
                app:layout_constraintStart_toStartOf="@+id/windImageView"
                app:layout_constraintTop_toBottomOf="@+id/windImageView" />

            <TextView
                android:id="@+id/windHintTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_wind_speed"
                app:layout_constraintEnd_toEndOf="@+id/windSpeedTextView"
                app:layout_constraintStart_toStartOf="@+id/windSpeedTextView"
                app:layout_constraintTop_toBottomOf="@+id/windSpeedTextView" />

            <TextView
                android:id="@+id/NO2TitleTextView"
                style="@style/WeatherHintTextView"
                android:layout_marginTop="@dimen/large_space"
                android:text="@string/title_no2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentDateTextView" />

            <TextView
                android:id="@+id/NO2QualityTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/test_air_quality"
                app:layout_constraintBottom_toBottomOf="@+id/NO2TitleTextView"
                app:layout_constraintStart_toEndOf="@+id/startBarrier"
                app:layout_constraintTop_toTopOf="@+id/NO2TitleTextView" />

            <TextView
                android:id="@+id/NO2concentrationTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/test_air_concentration"
                app:layout_constraintBottom_toBottomOf="@+id/NO2TitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/NO2TitleTextView" />

            <TextView
                android:id="@+id/PM10TitleTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_pm10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/NO2QualityTextView" />

            <TextView
                android:id="@+id/PM10QualityTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/test_air_quality"
                app:layout_constraintBottom_toBottomOf="@+id/PM10TitleTextView"
                app:layout_constraintStart_toEndOf="@+id/startBarrier"
                app:layout_constraintTop_toTopOf="@+id/PM10TitleTextView" />

            <TextView
                android:id="@+id/PM10concentrationTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/test_air_concentration"
                app:layout_constraintBottom_toBottomOf="@+id/PM10TitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/PM10TitleTextView" />

            <TextView
                android:id="@+id/O3TitleTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_o3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PM10TitleTextView" />

            <TextView
                android:id="@+id/O3QualityTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/test_air_quality"
                app:layout_constraintBottom_toBottomOf="@+id/O3TitleTextView"
                app:layout_constraintStart_toEndOf="@+id/startBarrier"
                app:layout_constraintTop_toTopOf="@+id/O3TitleTextView" />

            <TextView
                android:id="@+id/O3concentrationTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/test_air_concentration"
                app:layout_constraintBottom_toBottomOf="@+id/O3TitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/O3TitleTextView" />

            <TextView
                android:id="@+id/PM25TitleTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_pm25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/O3TitleTextView" />

            <TextView
                android:id="@+id/PM25QualityTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/test_air_quality"
                app:layout_constraintBottom_toBottomOf="@+id/PM25TitleTextView"
                app:layout_constraintStart_toEndOf="@+id/startBarrier"
                app:layout_constraintTop_toTopOf="@+id/PM25TitleTextView" />

            <TextView
                android:id="@+id/PM25concentrationTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/test_air_concentration"
                app:layout_constraintBottom_toBottomOf="@+id/PM25TitleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/PM25TitleTextView" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/startBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="NO2TitleTextView,PM10TitleTextView,O3TitleTextView,PM25TitleTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/medium_space"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feelsLikeHintTextView"
                tools:itemCount="1"
                tools:listitem="@layout/item_weather_forecast">

            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>