<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".app.screens.main.weather.WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cityNameTextView"
            style="@style/TitleTextView"
            android:layout_marginStart="@dimen/low_space"
            android:layout_marginTop="@dimen/medium_space"
            android:text="@string/test_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/locationCityIconImageView"
            style="@style/WeatherIconImageView"
            android:layout_marginStart="@dimen/low_space"
            android:layout_marginTop="0dp"
            android:src="@drawable/ic_baseline_location_on"
            app:layout_constraintBottom_toBottomOf="@+id/cityNameTextView"
            app:layout_constraintStart_toEndOf="@+id/cityNameTextView"
            app:layout_constraintTop_toTopOf="@+id/cityNameTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/medium_space"
            android:background="@drawable/layout_bg_weather"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityNameTextView">


            <TextView
                android:id="@+id/temperatureTextView"
                style="@style/TitleTextView"
                android:text="@string/test_temperature_new"
                android:textColor="@color/white"
                android:textSize="56sp"
                app:layout_constraintBottom_toTopOf="@+id/weatherIconImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/weatherIconImageView"
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:src="@drawable/ic_winter_w"
                app:layout_constraintBottom_toTopOf="@+id/humidityImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperatureTextView" />

            <ImageView
                android:id="@+id/searchByCoordinatesImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                app:layout_constraintBottom_toTopOf="@+id/currentWeatherTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weatherIconImageView"
                app:layout_constraintTop_toTopOf="@+id/weatherIconImageView"
                app:srcCompat="@drawable/ic_baseline_my_location" />

            <ImageView
                android:id="@+id/favoriteImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintBottom_toTopOf="@+id/currentWeatherTextView"
                app:layout_constraintEnd_toStartOf="@+id/weatherIconImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weatherIconImageView" />

            <TextView
                android:id="@+id/currentWeatherTextView"
                style="@style/WeatherDetailsTextView"
                android:text="@string/test_weather_description"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherIconImageView" />

            <TextView
                android:id="@+id/currentDateTextView"
                style="@style/WeatherDetailsTextView"
                android:text="@string/test_date"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentWeatherTextView" />

            <ImageView
                android:id="@+id/temperatureImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                app:layout_constraintBottom_toBottomOf="@+id/humidityImageView"
                app:layout_constraintEnd_toStartOf="@+id/humidityImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/humidityImageView"
                app:srcCompat="@drawable/ic_temperature" />

            <TextView
                android:id="@+id/feelsLikeTextView"
                style="@style/WeatherValueTextView"
                android:text="@string/test_temperature"
                app:layout_constraintEnd_toEndOf="@+id/temperatureImageView"
                app:layout_constraintStart_toStartOf="@+id/temperatureImageView"
                app:layout_constraintTop_toBottomOf="@+id/temperatureImageView" />

            <TextView
                android:id="@+id/feelsLikeHintTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_feels_like"
                app:layout_constraintEnd_toEndOf="@+id/feelsLikeTextView"
                app:layout_constraintStart_toStartOf="@+id/feelsLikeTextView"
                app:layout_constraintTop_toBottomOf="@+id/feelsLikeTextView" />


            <ImageView
                android:id="@+id/humidityImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginTop="@dimen/medium_space"
                android:layout_marginBottom="@dimen/large_space"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/pressureImageView"
                app:layout_constraintStart_toEndOf="@+id/temperatureImageView"
                app:layout_constraintTop_toBottomOf="@+id/weatherIconImageView"
                app:srcCompat="@drawable/ic_humidity" />

            <TextView
                android:id="@+id/humidityTextView"
                style="@style/WeatherValueTextView"
                android:text="@string/test_humidity"
                app:layout_constraintEnd_toEndOf="@+id/humidityImageView"
                app:layout_constraintStart_toStartOf="@+id/humidityImageView"
                app:layout_constraintTop_toBottomOf="@+id/humidityImageView" />

            <TextView
                android:id="@+id/humidityHintTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_humidity"
                app:layout_constraintEnd_toEndOf="@+id/humidityTextView"
                app:layout_constraintStart_toStartOf="@+id/humidityTextView"
                app:layout_constraintTop_toBottomOf="@+id/humidityTextView" />

            <ImageView
                android:id="@+id/pressureImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                app:layout_constraintBottom_toBottomOf="@+id/humidityImageView"
                app:layout_constraintEnd_toStartOf="@+id/windImageView"
                app:layout_constraintStart_toEndOf="@+id/humidityImageView"
                app:layout_constraintTop_toTopOf="@+id/humidityImageView"
                app:srcCompat="@drawable/ic_pressure" />

            <TextView
                android:id="@+id/pressureTextView"
                style="@style/WeatherValueTextView"
                android:text="@string/test_pressure"
                app:layout_constraintEnd_toEndOf="@+id/pressureImageView"
                app:layout_constraintStart_toStartOf="@+id/pressureImageView"
                app:layout_constraintTop_toBottomOf="@+id/pressureImageView" />

            <TextView
                android:id="@+id/pressureHintTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_pressure"
                app:layout_constraintEnd_toEndOf="@+id/pressureTextView"
                app:layout_constraintStart_toStartOf="@+id/pressureTextView"
                app:layout_constraintTop_toBottomOf="@+id/pressureTextView" />

            <ImageView
                android:id="@+id/windImageView"
                android:layout_width="44dp"
                android:layout_height="44dp"
                app:layout_constraintBottom_toBottomOf="@+id/humidityImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pressureImageView"
                app:layout_constraintTop_toTopOf="@+id/humidityImageView"
                app:srcCompat="@drawable/ic_wind" />

            <TextView
                android:id="@+id/windSpeedTextView"
                style="@style/WeatherValueTextView"
                android:text="@string/test_wind_speed"
                app:layout_constraintEnd_toEndOf="@+id/windImageView"
                app:layout_constraintStart_toStartOf="@+id/windImageView"
                app:layout_constraintTop_toBottomOf="@+id/windImageView" />

            <TextView
                android:id="@+id/windHintTextView"
                style="@style/WeatherHintTextView"
                android:text="@string/title_wind_speed"
                app:layout_constraintEnd_toEndOf="@+id/windSpeedTextView"
                app:layout_constraintStart_toStartOf="@+id/windSpeedTextView"
                app:layout_constraintTop_toBottomOf="@+id/windSpeedTextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginEnd="@dimen/medium_space"
            android:layout_marginBottom="@dimen/medium_space"
            android:background="@drawable/layout_bg_weather"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:itemCount="1"
            tools:listitem="@layout/item_weather_forecast">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>